5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1832_1647.log
== TEST (2019-06-13 18:20:36) 
-- CODE:
from py *
apro=
-- ERROR:
File "XXXX", line 1
    from py *
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:31:52) 
-- CODE:
from nampy *
apro=
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:31:53) 
-- CODE:
from nampy *
apro=
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:34:46) 
-- CODE:
from nampy *
while()
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:34:49) 
-- CODE:
from nampy *
while()
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:34:49) 
-- CODE:
from nampy *
while()
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:34:49) 
-- CODE:
from nampy *
while()
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:34:49) 
-- CODE:
from nampy *
while()
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:34:49) 
-- CODE:
from nampy *
while()
-- ERROR:
File "XXXX", line 1
    from nampy *
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:21) 
-- CODE:
from nampy import *
f=array(eval(input("digite    :" )))

while()
-- ERROR:
File "XXXX", line 4
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:22) 
-- CODE:
from nampy import *
f=array(eval(input("digite    :" )))

while()
-- ERROR:
File "XXXX", line 4
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:23) 
-- CODE:
from nampy import *
f=array(eval(input("digite    :" )))

while()
-- ERROR:
File "XXXX", line 4
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:23) 
-- CODE:
from nampy import *
f=array(eval(input("digite    :" )))

while()
-- ERROR:
File "XXXX", line 4
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
